# opencv_cpp

segmentation/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
